--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"asssfhry":"dsadsa","privacy":"https://www.ai-8mart.top/","alksoencxbg":"sw;llskd"}
+{"asssfhry":null,"privacy":null,"alksoencxbg":null}
