--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"asssfhry":null,"privacy":null,"alksoencxbg":null}
+{"asssfhry":"https","privacy":"https://mobile.sticon.cyou","alksoencxbg":"https://mobile.sticon.cyou"}
