--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"asssfhry":"https","privacy":"https://mobile.sticon.cyou","alksoencxbg":"https://mobile.sticon.cyou"}
+{"asssfhry":"https","privacy":"https://mobile.sticon.cyou","alksoencxbg":"huiyou"}
