--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"asssfhry":"https","privacy":"https://mobile.sticon.cyou","alksoencxbg":"huiyou"}
+{"asssfhry":"https","privacy":"https://www.ai-8mart.top/ ","alksoencxbg":"huiyou"}
